--- a/ProgramacionBackend-Ejercicios-main/09-Ejemplo Clase Motores/package.json
+++ b/ProgramacionBackend-Ejercicios-main/09-Ejemplo Clase Motores/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "01-apiRest",
+  "name": "09-ejemplo-clase-motores",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev":"nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.20"
   }
 }
